# wiz

./: .gitignore  Cargo.toml  LICENSE  examples.txt  package-lock.json  package.json  prompt.txt  readme.md
ggml-raw/: build.rs
ggml-raw/ggml/: CREDITS.txt
ggml-raw/src/: lib.rs
source/: cli.js
wiz/: package-lock.json  package.json  pnpm-lock.yaml  test.js  test.tsx  test3.js  tsconfig.json
wiz-cli/: Cargo.toml
wiz-cli/src/: cli_args.rs  main.rs
wiz-rs/: Cargo.toml
wiz-rs/src/: ggml.rs  lib.rs
wiz-server/: Cargo.toml
wiz-server/src/: main.rs
wiz/source/: cli.tsx
wiz/src/: App.tsx  cli.tsx  completionLoop.tsx  types.ts
wiz/src/api/: openai.ts
wiz/src/components/: Completion.tsx  Devider.tsx  EmptyLine.tsx  ProgressBar.tsx  Selection.tsx  SyntaxHighlight.tsx  TextInput.tsx
wiz/src/pages/: CompletionPage.tsx  DownloadPage.tsx  GenerationPage.tsx  PromptingPage.tsx  SetupPage.tsx
wiz/src/states/: generation.ts  prompting.ts  router.ts
wiz/src/utils/: api.ts  bash.ts  command.ts  config.ts  constants.ts  install.ts  openai.ts  partialJsonParser.ts
