[package]
name = "wiz-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4"
once_cell = "1.17.1"
num_cpus = "1.15.0"

wiz-rs = { path = "../wiz-rs" }

rand = { workspace = true }

rustyline = "11.0.0"
spinners = "4.1.0"
tokenizers = "0.13.3"
colored = "2.0.0"
